--- a/bog-express-one/package.json
+++ b/bog-express-one/package.json
@@ -6,9 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "concurrently": "^4.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.0.0",
     "express": "~4.16.0",
+    "mongoose": "^5.3.1",
     "morgan": "~1.9.0"
   }
 }
