--- a/bog-express-one/package.json
+++ b/bog-express-one/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "concurrently \"nodemon bin/www\" \"cd ./client  && npm start \" ",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "concurrently": "^4.0.1",
@@ -13,5 +16,8 @@
     "express": "~4.16.0",
     "mongoose": "^5.3.1",
     "morgan": "~1.9.0"
+  },
+  "engines": {
+    "node": "8.6.0"
   }
 }
